--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 # This is a basic workflow to help you get started with Actions
 # Global Variables
 env:
-  AZUREAPPLICATIONINSIGHTSNAME:   "DEMOApplicationInsights"
+  AZUREAPPLICATIONINSIGHTSNAME:   "DEMOApplicationInsightsa"
   CONTAINERREGISTRYNAME:          "DEMOContainerRegistry"
   CONTAINERREGISTRYNAMELOWER:     "democontainerregistry"
   REPOSITORYNAME:                 "demorepository"
