--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ env:
   AZUREAPPLICATIONINSIGHTSNAME:   "TESTDEMOApplicationInsightsa"
   CONTAINERREGISTRYNAME:          "TESTDEMOContainerRegistry"
   CONTAINERREGISTRYNAMELOWER:     "TESTdemocontainerregistry"
-  REPOSITORYNAME:                 "TESTdemorepository"
-  APPNAME:                        "TESTdemo"
+  REPOSITORYNAME:                 "testdemorepository"
+  APPNAME:                        "testdemo"
   KUBERNETESSERVICENAME:          "TESTDEMOKubernetesService"
   AZURELOGANALYTICSWORKSPACENAME: "TESTDEMOLogAnalyticsWorkspace"
   AZURELOADTESTINGNAME:           "TESTDEMOAzureLoadTesting"
