--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,12 +82,12 @@ jobs:
 
       # Deploy Bicep file Application Gateway
       - name: Deploy Bicep file Application Gateway
+        id: Gateway
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./Bicep/AAG/main.bicep
-          parameters: name="${{ env.CONTAINERREGISTRYNAME }}"
           failOnStdErr: false
 
       # Deploy Bicep file Kubernetes service
@@ -97,7 +97,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./Bicep/AKS/main.bicep
-          parameters: name="${{ env.KUBERNETESSERVICENAME }}" applicationGateway="1" 
+          parameters: name="${{ env.KUBERNETESSERVICENAME }}" applicationGateway="${{ steps.Gateway.id }}" 
           failOnStdErr: false
 
       # Assign role to Kubernetes service user to access Container Registry image
