--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,6 +105,12 @@ jobs:
           parameters: name="${{ env.KUBERNETESSERVICENAME }}" applicationGateway="${{ steps.Gateway.outputs.applicationGatewayId }}" 
           failOnStdErr: false
 
+      # Kubectl Install
+      - name: Kubectl Install
+        uses: azure/setup-kubectl@v2.0
+        with:
+          version: 'default'
+
       # Assign IP to Target Backend Pool
       - name: Assign IP to Target Backend Pool
         run: |
