--- a/src/helloworld-service/user-service-chart/templates/infrastructure.yaml
+++ b/src/helloworld-service/user-service-chart/templates/infrastructure.yaml
@@ -8,6 +8,12 @@ metadata:
     ver: {{ .Chart.AppVersion }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 ---
+# Namespace
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: "prometheus"
+---
 # Application Gateway Ingress Controller
 apiVersion: networking.k8s.io/v1
 kind: Ingress
