--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: CI
 
 env:
   AZUREAPPLICATIONINSIGHTSNAME:   "demo-performance-ai"
-  # CONTAINERREGISTRYNAME:          "msftdemoperformanceacr"
+  CONTAINERREGISTRYNAME:          ""
   # CONTAINERREGISTRYNAMELOWER:     "msftdemoperformanceacr"
   # REPOSITORYNAME:                 "finaltestdemorepository"
   APPNAME:                        "finaltestdemo"
@@ -56,6 +56,18 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      #asd
+      - name: prova
+        uses: greguintow/concat-string-action@v1
+        env:
+          CONTAINERREGISTRYNAME: prod
+        with:
+          string: '${{ github.event.inputs.CONTAINERREGISTRYNAME }}'
+
+      - name: asd
+        run: |
+          echo $CONTAINERREGISTRYNAME
 
       # Deploy Bicep file Application Insights 
       - name: Deploy Bicep file Application Insights 
@@ -137,7 +149,7 @@ jobs:
       - name: Deploy Container registry image to Kubernetes service
         run: |
           cd src/helloworld-service/user-service-chart
-          helm upgrade ${{ env.APPNAME }} . --install --set image.repository="${{ github.event.inputs.CONTAINERREGISTRYNAME.lowercase }}.azurecr.io/${{ github.event.inputs.REPOSITORYNAME }}" --set image.tag=v1 --set app.name=${{ env.APPNAME }} --namespace "demo-performance" --create-namespace  
+          helm upgrade ${{ env.APPNAME }} . --install --set image.repository=${{ github.event.inputs.CONTAINERREGISTRYNAME }}.azurecr.io/${{ github.event.inputs.REPOSITORYNAME }} --set image.tag=v1 --set app.name=${{ env.APPNAME }} --namespace "demo-performance" --create-namespace  
           echo "CLUSTERIP=$(kubectl get service "nginx-ingress-nginx-controller" -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
 
       # Deploy Prometheus service to Kubernetes
