--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ env:
   AZUREAPPLICATIONINSIGHTSNAME:   "demo-performance-ai"
   CONTAINERREGISTRYNAME:          ""
   REPOSITORYNAME:                 ""
+  AGENTVMSIZE:                    ""
   APPNAME:                        "finaltestdemo"
   KUBERNETESSERVICENAME:          "demo-performance-aks"
   AZURELOGANALYTICSWORKSPACENAME: "demo-performance-la-ws"
@@ -22,12 +23,19 @@ on:
   workflow_dispatch:
     inputs:
       CONTAINERREGISTRYNAME:
-        description: 'CONTAINER REGISTRY NAME'
+        description: 'Set a Container Registry Name'
         required: true
       REPOSITORYNAME:
-        description: 'REPOSITORY NAME'
+        description: 'Set a Repository Name'
         required: true
-
+      AGENTVMSIZE:
+        description: 'Choice a Agent Virtual Machine Size'
+        type: choice
+        required: true
+        options:
+        - D2ads_v5
+        - D4ads_v5
+        - D8ads_v5
 
   # Allows you to run this workflow manually from the Actions tab
 #  workflow_dispatch:
@@ -62,7 +70,7 @@ jobs:
         run: |
           echo "CONTAINERREGISTRYNAME=${{ github.event.inputs.CONTAINERREGISTRYNAME }}" >> $GITHUB_ENV
           echo "REPOSITORYNAME=${{ github.event.inputs.REPOSITORYNAME }}" >> $GITHUB_ENV
-
+          echo "AGENTVMSIZE=${{ github.event.inputs.AGENTVMSIZE }}" >> $GITHUB_ENV
 
       # Deploy Bicep file Application Insights 
       - name: Deploy Bicep file Application Insights 
@@ -109,7 +117,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./Bicep/AKS/mainAKS.bicep
-          parameters: name="${{ env.KUBERNETESSERVICENAME }}" applicationGateway="${{ steps.Gateway.outputs.applicationGatewayId }}" 
+          parameters: name="${{ env.KUBERNETESSERVICENAME }}" applicationGateway="${{ steps.Gateway.outputs.applicationGatewayId }}" agentVMSize="${{ env.AGENTVMSIZE}}"
           failOnStdErr: false
 
       # Kubectl tool installer
