add Grafana password

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,6 @@ jobs:
   # This workflow contains a single job called "build "
   build:
     # The type of runner that the job will run on
-
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -64,7 +63,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      #Set env to Input 
+      # Set env to Input 
       - name: Set the value
         id: step_one
         run: |
@@ -81,23 +80,6 @@ jobs:
           template: ./Bicep/AAI/mainAAI.bicep
           parameters: name="${{ env.AZUREAPPLICATIONINSIGHTSNAME }}" location="westeurope"
           failOnStdErr: false
-
-      # # Deploy Bicep file Container registry
-      # - name: Deploy Bicep file Container registry
-      #   uses: azure/arm-deploy@v1
-      #   with:
-      #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-      #     resourceGroupName: ${{ secrets.AZURE_RG }}
-      #     template: ./Bicep/ACR/mainACR.bicep
-      #     parameters: name="${{ env.CONTAINERREGISTRYNAME }}"
-      #     failOnStdErr: false
-
-      # # 'Build and push image to Azure Container Registry' 
-      # - name: 'Build and push image to Azure Container Registry'
-      #   run: |
-      #     az acr login --name "${{ env.CONTAINERREGISTRYNAMELOWER }}"
-      #     docker build src/helloworld-service/HelloWorld.API/ -t ${{ env.CONTAINERREGISTRYNAMELOWER }}.azurecr.io/${{ env.REPOSITORYNAME }}:v1
-      #     docker push ${{ env.CONTAINERREGISTRYNAMELOWER }}.azurecr.io/${{ env.REPOSITORYNAME }}:v1
 
       # Deploy Bicep file Application Gateway
       - name: Deploy Bicep file Application Gateway
@@ -141,8 +123,6 @@ jobs:
         shell: pwsh
 
       # Assign role to Kubernetes service user to access Container Registry image
-      # https://docs.microsoft.com/it-it/azure/aks/cluster-container-registry-integration?tabs=azure-cli
-      # https://docs.microsoft.com/en-us/answers/questions/536758/how-to-allow-aks-cluster-access-to-azure-container.html
       - name: Assign role to Kubernetes service user to access Container Registry image 
         run: |
           sleep 15
@@ -160,7 +140,7 @@ jobs:
         run: |
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
           helm repo update
-          helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values .github/config/prometheus.values.demo.yaml --wait --debug --atomic --timeout 600s --namespace "prometheus" --create-namespace
+          helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values .github/config/prometheus.values.demo.yaml --set grafana.adminPassword = ${{ secrets.AZURE_GRAFANAADMINPASSWORD }}  --wait --debug --atomic --timeout 600s --namespace "prometheus" --create-namespace
 
       # Deploy Bicep file Log Analytics workspace
       - name: Deploy Bicep file Log Analytics workspace
